--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Calculator</title>
   </head>
   <body>
     <div class="wrapper">
-      <section class="screen"></section>
+      <section class="screen">
+        0
+      </section>
 
-      <section class="calc-buttons"></section>
+      <section class="calc-buttons">
+        <div class="calc-button-row">
+          <button class="calc-button">7</button>
+          <button class="calc-button">8</button>
+          <button class="calc-button">9</button>
+          <button class="calc-button">&times;</button>
+        </div>
+        <div class="calc-button-row"></div>
+        <div class="calc-button-row"></div>
+        <div class="calc-button-row"></div>
+        <div class="calc-button-row"></div>
+      </section>
     </div>
   </body>
 </html>
