--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       </section>
 
       <section class="calc-buttons">
-        <div class="calc-button-row"></div>
+        <div class="calc-button-row">
+          <button class="calc-button">C</button>
+          <button class="calc-button">&larr;</button>
+          <button class="calc-button">&divide;</button>
+        </div>
         <div class="calc-button-row">
           <button class="calc-button">7</button>
           <button class="calc-button">8</button>
@@ -30,7 +34,7 @@
           <button class="calc-button">1</button>
           <button class="calc-button">2</button>
           <button class="calc-button">3</button>
-          <button class="calc-button">&plus;;</button>
+          <button class="calc-button">&plus;</button>
         </div>
         <div class="calc-button-row"></div>
       </section>
