--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <section class="calc-buttons">
         <div class="calc-button-row">
-          <button class="calc-button">C</button>
+          <button class="calc-button double">C</button>
           <button class="calc-button">&larr;</button>
           <button class="calc-button">&divide;</button>
         </div>
@@ -36,7 +36,10 @@
           <button class="calc-button">3</button>
           <button class="calc-button">&plus;</button>
         </div>
-        <div class="calc-button-row"></div>
+        <div class="calc-button-row">
+          <button class="calc-button triple">0</button>
+          <button class="calc-button">&equals;</button>
+        </div>
       </section>
     </div>
   </body>
